alignment corrections

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -67,74 +67,113 @@ h1, h2, h3, h4, h5 {
 /* =============================
   HEADER
 ==============================*/
+.container {
+  padding: 40px;
+}
 header {
  text-align: center;
- padding: 10px;
 }
 .navBar a{
   text-decoration: none;
   padding: 45px;
   text-align: center;
-  
+  color: grey;
+}
+.navBar img {
+  padding-top: 20px;
 }
 h1 {
-  font-size: 70px;
+  font-size: 60px;
 }
 .headerContent {
   border-bottom: 1px solid black;
+  /* padding: 20px; */
+  vertical-align: middle;
+
 }
 .title {
   display: inline-block;
   padding: 50px;
+  margin-top: 0px;
+
 }
 .headerImage {
   display: inline-block;
   padding: 50px;
+  margin-top: 0px;
+  /* line-height: 100px;
+  height: 100px; */
+  
+}
+button {
+  width: 130px;
+ 
 }
 
 /* ============================
   MAIN
 ============================ */
 main {
-  padding: 10px;
+ 
+  /* border-bottom: 1px solid black; */
+
+}
+p {
+  font-size: 16px;
+  line-height: 1.5;
 }
 .firstRow .itemOne{
   display: inline-block;
   width: 50%;
   padding: 20px;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 .firstRow .itemTwo {
   display: inline-block;
   width: 50%;
   padding: 20px;
+  padding-left: 0px;
+  padding-right: 0px;
 }
-.secondRow {
+.secondRow img{
   padding: 20px;
+  padding-left: 0px;
+  padding-right: 0px;
+  width: 100%;
 }
 .thirdRow .left {
   display: inline-block;
   padding: 20px;
-  width: 30%;
+  padding-left: 0px;
+  padding-right: 0px;
+  width: 33%;
 }
 .thirdRow .middle {
   display: inline-block;
   padding: 20px;
-  width: 30%;
+  padding-left: 0px;
+  padding-right: 0px;
+  width: 33%;
 }
 .thirdRow .right {
   display: inline-block;
   padding: 20px;
-  width: 30%;
+  padding-left: 0px;
+  padding-right: 0px;
+  width: 33%;
 }
 
 /* ============================
  FOOTER
 ============================= */
 footer {
-  padding: 10px;
+
+  border-top: 1px solid black;
 }
 .contactInfo {
   padding: 20px;
+  padding-left: 0px;
 }
 .copyright {
   text-align: center;
